[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/PooFarmerMap.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/Hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Gnome.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/Poo Farmer Peacetime.mp3" type="AudioStream" id=5]
[ext_resource path="res://Audio/forest-background.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/Poo Farmer Poo Store.mp3" type="AudioStream" id=7]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=8]
[ext_resource path="res://Scenes/UI/ModalWindow.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/MusicAutomaton.gd" type="Script" id=10]
[ext_resource path="res://Scenes/PooPellets.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/MouseControl.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Store.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Silo.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Animal/PooSpawner.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Turrets/Turret.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scripts/GnomePath.gd" type="Script" id=17]
[ext_resource path="res://Scripts/PooPelletsManager.gd" type="Script" id=18]
[ext_resource path="res://Scenes/UI/StartScreen.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/Goblin.tscn" type="PackedScene" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1536, 1536 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "Main To Shop"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ShopMusicPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1.66, 5.66 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackgroundMusicPlayer:volume_db")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1.66, 5.66 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackgroundEnvPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Poose Screen"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ShopMusicPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1.66 ),
"update": 1,
"values": [ -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackgroundMusicPlayer:volume_db")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1.66 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackgroundEnvPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -80.0 ]
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -224, 0, 0, 0, 0, 0, -304, 40, 0, 0, 0, 0, -512, 144, 0, 0, 0, 0, -744, 256, 0, 0, 0, 0, -920, 264, 0, 0, 0, 0, -1032, 312, 0, 0, 0, 0, -1184, 344, 0, 0, 0, 0, -1400, 448, 0, 0, 0, 0, -1416, 520, 0, 0, 0, 0, -1568, 640, 0, 0, 0, 0, -1568, 768, 0, 0, 0, 0, -1240, 1032, 0, 0, 0, 0, -1240, 1184, 0, 0, 0, 0, -1272, 1232, 0, 0, 0, 0, -1328, 1248, 0, 0, 0, 0, -1344, 1224, 0, 0, 0, 0, -1552, 1224, 0, 0, 0, 0, -1632, 1224, 0, 0, 0, 0, -1648, 1248, 0, 0, 0, 0, -1784, 1248, 0, 0, 0, 0, -1792, 1272, 0, 0, 0, 0, -1856, 1272, 0, 0, 0, 0, -1880, 1296, 0, 0, 0, 0, -2064, 1296, 0, 0, 0, 0, -2184, 1208, 0, 0, 0, 0, -2208, 1160, 0, 0, 0, 0, -2272, 1128, 0, 0, 0, 0, -2312, 1104, 0, 0, 0, 0, -2360, 1088, 0, 0, 0, 0, -2432, 1080, 0, 0, 0, 0, -2480, 1104, 0, 0, 0, 0, -2528, 1136, 0, 0, 0, 0, -2552, 1176, 0, 0, 0, 0, -2552, 1240, 0, 0, 0, 0, -2552, 1280, 0, 0, 0, 0, -2552, 1320, 0, 0, 0, 0, -2552, 1368, 0, 0, 0, 0, -2536, 1408, 0, 0, 0, 0, -2512, 1448, 0, 0, 0, 0, -2496, 1480, 0, 0, 0, 0, -2440, 1496, 0, 0, 0, 0, -2392, 1520, 0, 0, 0, 0, -2296, 1512, 0, 0, 0, 0, -2232, 1488, 0, 0, 0, 0, -2152, 1440, 0, 0, 0, 0, -2152, 1376, 0, 0, 0, 0, -2152, 1272, 0, 0, 0, 0, -2120, 1256, 0, 0, 0, 0, -2056, 1296, 0, 0, 0, 0, -1872, 1296, 0, 0, 0, 0, -1808, 1272, 0, 0, 0, 0, -1704, 1248, 0, 0, 0, 0, -1592, 1224, 0, 0, 0, 0, -1376, 1224, 0, 0, 0, 0, -1296, 1248, 0, 0, 0, 0, -1072, 1344, 0, 0, 0, 0, -976, 1344, 0, 0, 0, 0, -944, 1272, 0, 0, 0, 0, -944, 1136, 0, 0, 0, 0, -992, 1088, 0, 0, 0, 0, -1016, 1024, 0, 0, 0, 0, -1016, 840, 0, 0, 0, 0, -864, 776, 0, 0, 0, 0, -776, 768, 0, 0, 0, 0, -632, 848, 0, 0, 0, 0, -512, 856, 0, 0, 0, 0, -456, 824, 0, 0, 0, 0, -392, 792, 0, 0, 0, 0, -272, 792, 0, 0, 0, 0, -256, 768, 0, 0, 0, 0, -104, 768, 0, 0, 0, 0, -88, 744, 0, 0, 0, 0, -56, 744, 0, 0, 0, 0, -48, 728, 0, 0, 0, 0, -8, 720, 0, 0, 0, 0, 104, 712, 0, 0, 0, 0, 104, 712, 0, 0, 0, 0, 104, 712, 0, 0, 0, 0, 104, 712, 0, 0, 0, 0, 104, 712, 0, 0, 0, 0, 104, 712, 0, 0, 0, 0, 104, 712, 0, 0, 0, 0, -16, 720, 0, 0, 0, 0, -64, 736, 0, 0, 0, 0, -104, 768, 0, 0, 0, 0, -96, 792, 0, 0, 0, 0, -32, 800, 0, 0, 0, 0, 16, 848, 0, 0, 0, 0, 88, 936, 0, 0, 0, 0, 88, 960, 0, 0, 0, 0, 128, 984, 0, 0, 0, 0, 192, 1016, 0, 0, 0, 0, 248, 1064, 0, 0, 0, 0, 280, 1096, 0, 0, 0, 0, 280, 1128, 0, 0, 0, 0, 304, 1152, 0, 0, 0, 0, 304, 1200, 0, 0, 0, 0, 304, 1248, 0, 0, 0, 0, 208, 1272, 0, 0, 0, 0, 176, 1296, 0, 0, 0, 0, -48, 1296, 0, 0, 0, 0, -56, 1320, 0, 0, 0, 0, -128, 1328, 0, 0, 0, 0, -136, 1344, 0, 0, 0, 0, -224, 1344, 0, 0, 0, 0, -232, 1368, 0, 0, 0, 0, -608, 1368, 0, 0, 0, 0, -640, 1400, 0, 0, 0, 0, -624, 1464, 0, 0, 0, 0, -576, 1512, 0, 0, 0, 0, -512, 1576, 0, 0, 0, 0, -448, 1616, 0, 0, 0, 0, -400, 1632, 0, 0, 0, 0, -344, 1640, 0, 0, 0, 0, -304, 1664, 0, 0, 0, 0, -240, 1672, 0, 0, 0, 0, -96, 1672, 0, 0, 0, 0, 16, 1672, 0, 0, 0, 0, 168, 1672, 0, 0, 0, 0, 168, 1672, 0, 0, 0, 0, 168, 1672, 0, 0, 0, 0, 168, 1672, 0, 0, 0, 0, -96, 1704, 0, 0, 0, 0, -232, 1720, 0, 0, 0, 0, -384, 1736, 0, 0, 0, 0, -416, 1752, 0, 0, 0, 0, -448, 1776, 0, 0, 0, 0, -488, 1784, 0, 0, 0, 0, -512, 1800, 0, 0, 0, 0, -536, 1832, 0, 0, 0, 0, -528, 1856, 0, 0, 0, 0, -512, 1880, 0, 0, 0, 0, -536, 1912, 0, 0, 0, 0, -536, 1976, 0, 0, 0, 0, -576, 2000, 0, 0, 0, 0, -624, 2024, 0, 0, 0, 0, -656, 2040, 0, 0, 0, 0, -704, 2040, 0, 0, 0, 0, -720, 2024, 0, 0, 0, 0, -776, 2008, 0, 0, 0, 0, -816, 1992, 0, 0, 0, 0, -856, 2040, 0, 0, 0, 0, -968, 2136, 0, 0, 0, 0, -1032, 2296, 0, 0, 0, 0, -1152, 2424, 0, 0, 0, 0, -1208, 2448, 0, 0, 0, 0, -1224, 2472, 0, 0, 0, 0, -1416, 2472, 0, 0, 0, 0, -1448, 2456, 0, 0, 0, 0, -1744, 2448, 0, 0, 0, 0, -1808, 2488, 0, 0, 0, 0, -1888, 2520, 0, 0, 0, 0, -2008, 2512, 0, 0, 0, 0, -2056, 2568, 0, 0, 0, 0, -2096, 2568, 0, 0, 0, 0, -2160, 2560, 0, 0, 0, 0, -2256, 2552, 0, 0, 0, 0, -2320, 2528, 0, 0, 0, 0, -2400, 2480, 0, 0, 0, 0, -2448, 2416, 0, 0, 0, 0, -2456, 2352, 0, 0, 0, 0, -2456, 2280, 0, 0, 0, 0, -2432, 2192, 0, 0, 0, 0, -2408, 2120, 0, 0, 0, 0, -2392, 2024, 0, 0, 0, 0, -2336, 1992, 0, 0, 0, 0, -2288, 1936, 0, 0, 0, 0, -2192, 1928, 0, 0, 0, 0, -2040, 1936, 0, 0, 0, 0, -1904, 1904, 0, 0, 0, 0, -1832, 1896, 0, 0, 0, 0, -1768, 1864, 0, 0, 0, 0, -1704, 1848, 0, 0, 0, 0, -1640, 1824, 0, 0, 0, 0, -1568, 1824, 0, 0, 0, 0, -1496, 1800, 0, 0, 0, 0, -1368, 1800, 0, 0, 0, 0, -1200, 1800, 0, 0, 0, 0, -1160, 1840, 0, 0, 0, 0, -1144, 1920, 0, 0, 0, 0, -1104, 1976, 0, 0, 0, 0, -1064, 2032, 0, 0, 0, 0, -1000, 2064, 0, 0, 0, 0, -928, 2088, 0, 0, 0, 0, -848, 2072, 0, 0, 0, 0, -776, 2104, 0, 0, 0, 0, -744, 2112, 0, 0, 0, 0, -688, 2120, 0, 0, 0, 0, -640, 2136, 0, 0, 0, 0, -576, 2144, 0, 0, 0, 0, -544, 2168, 0, 0, 0, 0, -424, 2168, 0, 0, 0, 0, -352, 2160, 0, 0, 0, 0, -320, 2136, 0, 0, 0, 0, -248, 2136, 0, 0, 0, 0, -232, 2112, 0, 0, 0, 0, -168, 2112, 0, 0, 0, 0, -136, 2120, 0, 0, 0, 0, -104, 2168, 0, 0, 0, 0, -72, 2208, 0, 0, 0, 0, -48, 2248, 0, 0, 0, 0, 8, 2272, 0, 0, 0, 0, 40, 2312, 0, 0, 0, 0, 96, 2336, 0, 0, 0, 0, 128, 2384, 0, 0, 0, 0, 200, 2496, 0, 0, 0, 0, 200, 2496, 0, 0, 0, 0, 200, 2496, 0, 0, 0, 0, 200, 2496, 0, 0, 0, 0, 200, 2496, 0, 0, 0, 0, 200, 2496, 0, 0, 0, 0, 136, 2400, 0, 0, 0, 0, 96, 2352, 0, 0, 0, 0, 24, 2296, 0, 0, 0, 0, -32, 2256, 0, 0, 0, 0, -56, 2224, 0, 0, 0, 0, -88, 2192, 0, 0, 0, 0, -112, 2136, 0, 0, 0, 0, -152, 2096, 0, 0, 0, 0, -152, 1936, 0, 0, 0, 0, -128, 1904, 0, 0, 0, 0, -120, 1840, 0, 0, 0, 0, -80, 1768, 0, 0, 0, 0, -176, 1712, 0, 0, 0, 0, -352, 1648, 0, 0, 0, 0, -464, 1608, 0, 0, 0, 0, -544, 1544, 0, 0, 0, 0, -608, 1480, 0, 0, 0, 0, -648, 1408, 0, 0, 0, 0, -712, 1344, 0, 0, 0, 0, -736, 1320, 0, 0, 0, 0, -776, 1312, 0, 0, 0, 0, -816, 1280, 0, 0, 0, 0, -912, 1272, 0, 0, 0, 0, -992, 1344, 0, 0, 0, 0, -1080, 1344, 0, 0, 0, 0, -1160, 1280, 0, 0, 0, 0, -1224, 1200, 0, 0, 0, 0, -1224, 1080, 0, 0, 0, 0, -1224, 1040, 0, 0, 0, 0, -1288, 992, 0, 0, 0, 0, -1368, 936, 0, 0, 0, 0, -1432, 864, 0, 0, 0, 0, -1488, 816, 0, 0, 0, 0, -1568, 768, 0, 0, 0, 0, -1568, 696, 0, 0, 0, 0, -1568, 632, 0, 0, 0, 0, -1632, 592, 0, 0, 0, 0, -1720, 600, 0, 0, 0, 0, -1760, 648, 0, 0, 0, 0, -1792, 712, 0, 0, 0, 0, -1808, 776, 0, 0, 0, 0, -1832, 808, 0, 0, 0, 0, -1880, 816, 0, 0, 0, 0, -1912, 792, 0, 0, 0, 0, -1960, 792, 0, 0, 0, 0, -2000, 824, 0, 0, 0, 0, -2040, 816, 0, 0, 0, 0, -2072, 792, 0, 0, 0, 0, -2120, 792, 0, 0, 0, 0, -2120, 704, 0, 0, 0, 0, -2160, 672, 0, 0, 0, 0, -2216, 656, 0, 0, 0, 0, -2240, 616, 0, 0, 0, 0, -2240, 584, 0, 0, 0, 0, -2296, 552, 0, 0, 0, 0, -2312, 520, 0, 0, 0, 0, -2312, 456, 0, 0, 0, 0, -2312, 352, 0, 0, 0, 0, -2296, 328, 0, 0, 0, 0, -2288, 288, 0, 0, 0, 0, -2320, 272, 0, 0, 0, 0, -2376, 256, 0, 0, 0, 0, -2440, 232, 0, 0, 0, 0, -2440, 232, 0, 0, 0, 0, -2440, 232, 0, 0, 0, 0, -2440, 232, 0, 0, 0, 0, -2440, 232, 0, 0, 0, 0, -2440, 232, 0, 0, 0, 0, -2440, 232, 0, 0, 0, 0, -2392, 248, 0, 0, 0, 0, -2344, 256, 0, 0, 0, 0, -2280, 264, 0, 0, 0, 0, -2224, 216, 0, 0, 0, 0, -2192, 176, 0, 0, 0, 0, -2128, 160, 0, 0, 0, 0, -2064, 128, 0, 0, 0, 0, -1992, 120, 0, 0, 0, 0, -1936, 120, 0, 0, 0, 0, -1904, 144, 0, 0, 0, 0, -1856, 152, 0, 0, 0, 0, -1840, 160, 0, 0, 0, 0, -1800, 168, 0, 0, 0, 0, -1784, 160, 0, 0, 0, 0, -1784, 112, 0, 0, 0, 0, -1760, 96, 0, 0, 0, 0, -1760, 16, 0, 0, 0, 0, -1728, -16, 0, 0, 0, 0, -1696, -48, 0, 0, 0, 0, -1680, -88, 0, 0, 0, 0, -1664, -128, 0, 0, 0, 0, -1616, -160, 0, 0, 0, 0, -1560, -176, 0, 0, 0, 0, -1488, -168, 0, 0, 0, 0, -1400, -168, 0, 0, 0, 0, -1320, -184, 0, 0, 0, 0, -1248, -184, 0, 0, 0, 0, -1208, -152, 0, 0, 0, 0, -1208, -152, 0, 0, 0, 0, -1208, -152, 0, 0, 0, 0, -1208, -64, 0, 0, 0, 0, -1208, 32, 0, 0, 0, 0, -1264, 48, 0, 0, 0, 0, -1288, 72, 0, 0, 0, 0, -1408, 72, 0, 0, 0, 0, -1408, 176, 0, 0, 0, 0, -1392, 200, 0, 0, 0, 0, -1392, 336, 0, 0, 0, 0, -1416, 384, 0, 0, 0, 0, -1384, 432, 0, 0, 0, 0, -1320, 392, 0, 0, 0, 0, -1240, 368, 0, 0, 0, 0, -1160, 336, 0, 0, 0, 0, -1080, 312, 0, 0, 0, 0, -992, 288, 0, 0, 0, 0, -904, 272, 0, 0, 0, 0, -784, 264, 0, 0, 0, 0, -712, 240, 0, 0, 0, 0, -656, 216, 0, 0, 0, 0, -584, 192, 0, 0, 0, 0, -536, 144, 0, 0, 0, 0, -416, 88, 0, 0, 0, 0, -336, 56, 0, 0, 0, 0, -240, 48, 0, 0, 0, 0, -48, 0, 0, 0, 0, 0, -224, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 8 )

[node name="Background" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background"]
position = Vector2( 1536, 1536 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Background"]
scale = Vector2( 1.5, 1.5 )
z_index = -5
frames = SubResource( 2 )
centered = false

[node name="PooSpawner" parent="." instance=ExtResource( 15 )]

[node name="PooPelletsManager" type="Node2D" parent="." groups=["poo_pellets_manager"]]
script = ExtResource( 18 )
poo_pellets = ExtResource( 11 )

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
autoplay = true
mix_target = 2
bus = "Bkgd Music"

[node name="BackgroundEnvPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
autoplay = true
mix_target = 2
bus = "Environment"

[node name="ShopMusicPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 7 )
volume_db = -80.0
autoplay = true
mix_target = 2
bus = "Shop Music"

[node name="MusicAutomaton" type="AnimationPlayer" parent="."]
pause_mode = 2
"anims/Main To Shop" = SubResource( 3 )
"anims/Poose Screen" = SubResource( 4 )
script = ExtResource( 10 )

[node name="Silo" parent="." instance=ExtResource( 14 )]
position = Vector2( 1560, 1560 )
__meta__ = {
"_edit_group_": true
}

[node name="GnomePath" type="Path2D" parent="."]
position = Vector2( 2648, 384 )
curve = SubResource( 5 )
script = ExtResource( 17 )

[node name="PathFollow2D" type="PathFollow2D" parent="GnomePath"]
position = Vector2( -224.002, 0.000873786 )
offset = 0.00390625
rotate = false

[node name="Gnome" parent="GnomePath/PathFollow2D" instance=ExtResource( 4 )]
position = Vector2( 0.00170898, -24.0009 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1406, 1619 )
__meta__ = {
"_edit_group_": true
}
currentHoldAmount = 10

[node name="ModalWindow" parent="Player" instance=ExtResource( 9 )]
visible = false
__meta__ = {
"_edit_horizontal_guides_": [ 150.0 ]
}

[node name="StartScreen" parent="." instance=ExtResource( 19 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]
pause_mode = 2
margin_top = -365.0
margin_bottom = -365.0

[node name="Store" parent="." instance=ExtResource( 13 )]
margin_left = 672.0
margin_top = 384.0
margin_right = 672.0
margin_bottom = 384.0

[node name="MouseControl" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 12 )

[node name="ClickResetTimer" type="Timer" parent="MouseControl"]
wait_time = 0.1
one_shot = true

[node name="Turret" parent="." instance=ExtResource( 16 )]
position = Vector2( 1697, 1702 )

[node name="Goblin" parent="Turret" instance=ExtResource( 20 )]
position = Vector2( -231, 298 )

[node name="Goblin2" parent="Turret" instance=ExtResource( 20 )]
position = Vector2( 222, 168 )

[node name="Goblin3" parent="Turret" instance=ExtResource( 20 )]
position = Vector2( 148, -152 )

[node name="Goblin4" parent="Turret" instance=ExtResource( 20 )]
position = Vector2( 148, -152 )

[connection signal="store_opened" from="GnomePath/PathFollow2D/Gnome" to="Store" method="_on_Gnome_store_opened"]
[connection signal="firePoo" from="Player" to="PooPelletsManager" method="_on_Player_firePoo"]
[connection signal="update_global_poo_label" from="Player" to="HUD" method="_on_Player_update_global_poo_label"]
[connection signal="game_paused" from="Player/ModalWindow" to="MouseControl" method="set_mouse_hand"]
[connection signal="game_quit" from="Player/ModalWindow" to="." method="quit"]
[connection signal="game_quit" from="Player/ModalWindow" to="MouseControl" method="set_mouse_hand"]
[connection signal="game_reset" from="Player/ModalWindow" to="." method="reset"]
[connection signal="game_resumed" from="Player/ModalWindow" to="MouseControl" method="set_mouse_crosshairs"]
[connection signal="game_started" from="StartScreen" to="." method="_on_StartScreen_game_started"]
[connection signal="game_started" from="StartScreen" to="Player/ModalWindow" method="_on_StartScreen_game_started"]
[connection signal="game_started" from="StartScreen" to="MouseControl" method="set_mouse_crosshairs"]
[connection signal="how_to_play_requested" from="StartScreen" to="Player/ModalWindow" method="show_how_to_play"]
[connection signal="arsenal_state_changed" from="HUD" to="Player" method="_on_shoot_enabled_changed"]
[connection signal="close_store" from="Store" to="MusicAutomaton" method="_on_Store_close_store"]
[connection signal="close_store" from="Store" to="Player" method="_on_shoot_enabled_changed" binds= [ false ]]
[connection signal="close_store" from="Store" to="MouseControl" method="set_mouse_crosshairs"]
[connection signal="open_store" from="Store" to="MusicAutomaton" method="_on_Store_open_store"]
[connection signal="open_store" from="Store" to="Player" method="_on_shoot_enabled_changed" binds= [ true ]]
[connection signal="open_store" from="Store" to="MouseControl" method="set_mouse_hand"]
[connection signal="timeout" from="MouseControl/ClickResetTimer" to="MouseControl" method="_on_ClickResetTimer_timeout"]
